--- a/public/css/style.css
+++ b/public/css/style.css
@@ -225,6 +225,26 @@ h1, h2, h3 {
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 }
 
+.notes-column {
+    grid-column: span 2; /* Order column spans both columns */
+    background-color: #f9f9f9; /* Light gray background */
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+}
+
+#notes-column-box {
+    width: 100%;
+    height: 150px;
+    padding: 12px 20px;
+    box-sizing: border-box;
+    border: 2px solid #ccc;
+    border-radius: 4px;
+    background-color: #f8f8f8;
+    font-size: 16px;
+    resize: none;
+}
+
 #selected-items-list {
     max-height: 400px;
     overflow-y: auto;
