--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,14 +11,14 @@ body {
     background-color: #ffffff;
     border: 2px solid rgb(48, 200, 103);
     border-radius: 5px;
-    padding-top: 5%;
-    padding-right: 5%;
-    padding-bottom: 5%;
-    padding-left: 5%;
+    padding-top: 2%;
+    padding-right: 2%;
+    padding-bottom: 2%;
+    padding-left: 2%;
 }
 
-.order-box :hover {
-    background-color: #c6c6c6
+div.order-box :hover {
+    background-color: #c6c6c6;
 }
 
 .container {
