--- a/public/css/style.css
+++ b/public/css/style.css
@@ -555,3 +555,27 @@ h1, h2, h3 {
     align-items: center;
 }
 
+/* Completed Orders Table */
+
+.finishedOrdersTable {
+    font-family: Arial, Helvetica, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+  }
+  
+  .finishedOrdersTable td, #customers th {
+    border: 1px solid #ddd;
+    padding: 8px;
+  }
+  
+  .finishedOrdersTable tr:nth-child(even){background-color: #f2f2f2;}
+  
+  .finishedOrdersTable tr:hover {background-color: #ddd;}
+  
+  .finishedOrdersTable th {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align: left;
+    background-color: #42a7f5;
+    color: white;
+  }
